# stormClacker

./: CMakeLists.txt  README.md  scoreboard.txt
inc/: render.h  score.h
src/: .main.c.swn  .main.c.swo  .render.c.swo  .render.c.swp  main.c  render.c
