cmake_minimum_required(VERSION 3.5)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
project(sdl_program)
include_directories("/usr/include/SDL2/")
include_directories("./inc/")
file(GLOB SOURCES "src/*.c")
execute_process(COMMAND sdl2-config --cflags OUTPUT_VARIABLE SDL_CFLAGS)
execute_process(COMMAND sdl2-config --libs OUTPUT_VARIABLE SDL_LDFLAGS)
#message("LD ${SDL_LDFLAGS}")
#message("C ${SDL_CFLAGS}")
string(STRIP ${SDL_LDFLAGS} SDL_LDFLAGS)
string(STRIP ${SDL_CFLAGS} SDL_CFLAGS)
#message("LD ${SDL_LDFLAGS}")
#message("C ${SDL_CFLAGS}")
add_executable(sdl_program ${SOURCES})
target_compile_options(sdl_program PRIVATE ${SDL_CFLAGS}) 
target_link_libraries(sdl_program PRIVATE ${SDL_LDFLAGS})
